添加登录注册修改
Change-Id: I74a61d38e03a9b402abd63374fd7aa9463cfc5fa
Signed-off-by: lonecloud <lonecloudmac@icloud.com>

--- a/classWork/WebContent/index.html
+++ b/classWork/WebContent/index.html
@@ -98,20 +98,20 @@
                 <ul>
                     <li>
                         <i class="span_username"></i>
-                        <input type="text" class="inputText">
+                        <input type="text" class="inputText" id="username">
                     </li>
                     <li>
                         <i class="span_pwd"></i>
-                        <input type="text" class="inputText">
+                        <input type="password" class="inputText" id="password">
                     </li>
                     <li><label for="autoLogin" style="font-size: 10px;color: #FFFFFF">
-                        <input type="checkbox" name="" id="autoLogin">
+                        <input type="checkbox" name="" id="autoLogin" >
                         自动登录
                     </label>
                         <a href="#" class="forgetPwd">找回密码</a>
                     </li>
                     <li>
-                        <button class="login_btn">登录</button>
+                        <button class="login_btn" id="loginBtn">登录</button>
                     </li>
                     <li>
                         <a href="#" class="icon_qq"></a>
@@ -1077,9 +1077,6 @@
                 <a href="#" class="light">Guan5页游网</a>
                 <a href="#" class="light">最新网页游戏</a>
                 <a href="#" class="light">66378游戏网</a>
-
-
-
             </div>
 
         </div>
@@ -1102,6 +1099,8 @@
     </div>
 </div>
 <!--关于我们界面-->
-<script src="js/head.js?v=1"></script>
+<script type="text/javascript" src="js/jquery.min.js"></script>
+<script src="js/common.js"></script>
+<script src="js/index.js?v=1"></script>
 </body>
 </html>
