--- a/classWork/WebContent/login.html
+++ b/classWork/WebContent/login.html
@@ -24,13 +24,13 @@
                         <li>
                             <div class="inputContent">
                                 <i class="iUser"></i>
-                                <input type="text" placeholder="登录名">
+                                <input type="text" placeholder="登录名" id="username">
                             </div>
                         </li>
                         <li>
                             <div class="inputContent">
                                 <i class="iPwd"></i>
-                                <input type="text" placeholder="密码">
+                                <input type="password" placeholder="密码" id="password">
                             </div>
                         </li>
                         <li>
@@ -40,7 +40,7 @@
                             <a href="#">忘记密码?</a>
                         </li>
                         <li>
-                            <button class="loginBtn"> 登录</button>
+                            <button class="loginBtn" id="login"> 登录</button>
                         </li>
                         <li>
                             <div class="toQQ">
@@ -62,4 +62,7 @@
 </div>
 
 </body>
+<script src="js/common.js"></script>
+<script src="js/jquery.min.js"></script>
+<script src="js/login.js?v=1"></script>
 </html>
