--- a/classWork/WebContent/register.html
+++ b/classWork/WebContent/register.html
@@ -63,7 +63,7 @@
         </div>
         <div class="right">
             <div class="loginText">
-                已有99yx.com登录名？<a href="#">立即登录</a>
+                已有99yx.com登录名？<a href="login.html">立即登录</a>
             </div>
             <div class="toQQ">
                 使用其他账号登录:
