--- a/classWork/WebContent/member.html
+++ b/classWork/WebContent/member.html
@@ -58,8 +58,8 @@
         </div>
         <div class="f-left ren-m">
             <p></p>
-            <h4 class="name dis">欢迎您</h4>
-            <div id="registTime">上次登录时间：2017-07-12 19:26:02</div>
+            <h4 class="name dis">欢迎您:<span class="user_name"></span></h4>
+            <div id="registTime">上次登录时间：<span id="lastLoginTime"></span></div>
         </div>
         <div class="f-right manage">
             <div class="ma-list">
@@ -101,17 +101,18 @@
             </div>
             <div id="change">
             <div id="changeInfo" >
-                <form action="#">
+                <form action="#" id="infoForm">
+                    <input type="hidden" name="id" class="id">
                     <div class="input_div">
                         <div class="line">
                             <div class="left">帐号：</div>
-                            <div class="mid"><span>lonecloud</span></div>
+                            <div class="mid"><span class="user_name"></span></div>
                             <div class="right"></div>
                         </div>
                         <div class="line">
                             <div class="left">手机：</div>
                             <div class="mid">
-                                <input type="text" name="mobile" id="mobile" value="" class="input_forie6">
+                                <input type="text" name="tel" id="tel" value="" class="input_forie6">
                             </div>
                             <div class="onShow" id="mobileTip">请输入电话号码，可以为空</div>
                         </div>
@@ -124,9 +125,9 @@
                         <div class="line">
                             <div class="left">性别：</div>
                             <div class="mid">
-                                <input type="radio" name="gender" value="1"> 男
-                                <input name="gender" type="radio" value="2"> 女
-                                <input name="gender" type="radio" value="0"> 保密
+                                <input type="radio" name="sex" value="男"> 男
+                                <input name="gender" type="radio" value="女"> 女
+                                <input name="gender" type="radio" value="保密"> 保密
                             </div>
                             <div class="right" id="sexTip"></div>
                         </div>
@@ -140,14 +141,14 @@
                         <div class="line">
                             <div class="left">联系地址：</div>
                             <div class="mid">
-                                <input type="text" name="addr" id="addr" value="" class="input_forie6">
+                                <input type="text" name="address" id="address" value="" class="input_forie6">
                             </div>
                             <div class="onShow" id="addrTip">请输入联系地址，可以为空</div>
                         </div>
                         <div class="line">
                             <div class="left">&nbsp;</div>
                             <div class="mid">
-                                <input type="submit" name="submit" value="确认修改" class="btn btn-send dis" id="submit">
+                                <input type="button" name="submit" value="确认修改" class="btn btn-send dis" id="submitInfo">
                             </div>
                         </div>
                     </div>
@@ -156,11 +157,12 @@
             <div id="changeEmail" class="hidden">
                 <div class="board board_yes" style="width:300px;">
                     <span class="user_center_icon yes"></span>
-                    <span class="board_item">绑定邮箱：8389****@qq.com</span>
+                    <span class="board_item">绑定邮箱：<span id="user_email"></span></span>
                 </div>
             </div>
             <div id="changePwd" class="hidden">
-                <form id="changePass" action="http://www.99yx.com/member/mem_uploadpwd" method="POST">
+                <form id="changePass" action="#">
+                    <input type="hidden" name="id" class="id">
                     <div class="line">
                         <div class="left">原密码：</div>
                         <div class="mid"><input type="password" name="oldpwd" id="passwd1" class="input_forie6"></div>
@@ -179,7 +181,7 @@
                     </div>
                     <div class="line">
                         <div class="left">&nbsp;</div>
-                        <div class="mid"><input class="btn btn-send dis" type="submit" value="确定"></div>
+                        <div class="mid"><input class="btn btn-send dis" type="button" value="确定" id="pwdSubmit"></div>
                     </div>
                 </form>
             </div>
@@ -187,6 +189,8 @@
         </div>
     </div>
 </div>
+<script  src="js/common.js"></script>
+<script type="text/javascript" src="js/jquery.min.js"></script>
 <script src="js/member.js"></script>
 </body>
 </html>
