校验用户状态
Change-Id: Ia4abb3fe2d876a829d3b218780b8f13f0ff98fe3
Signed-off-by: lonecloud <lonecloudmac@icloud.com>

--- a/WebContent/master.html
+++ b/WebContent/master.html
@@ -24,8 +24,8 @@
             <ul class="top_right_ul">
                 <li><a href="#"><span class="icon_bg save ">&nbsp;</span>加入收藏</a></li>
                 <li><a href="#"><span class="icon_bg desk">&nbsp;</span>放到桌面</a></li>
-                <li><a href="#"><span class="icon_bg reg">&nbsp;</span>注册</a></li>
-                <li><a href="#"><span class="icon_bg logo">&nbsp;</span>登录</a></li>
+                <li><a href="register.html"><span class="icon_bg reg">&nbsp;</span>注册</a></li>
+                <li><a href="login.html"><span class="icon_bg logo">&nbsp;</span>登录</a></li>
             </ul>
         </div>
     </div>
@@ -37,12 +37,12 @@
         </div>
         <div class="menu_index">
             <ul class="menu_index_ul">
-                <li><a href="index.html"><b>首页</b><br/><span>HOME</span></a></li>
-                <li><a href="gameshall.html"><b>游戏大厅</b><br/><span>GAMES</span></a></li>
-                <li><a href="#"><b>用户管理</b><br/><span>MASTER</span></a></li>
-                <li><a href="member.html"><b>用户中心</b><br/><span>MEMBER</span></a></li>
-                <li><a href="service.html"><b>客服中心</b><br/><span>SERVICE</span></a></li>
-                <li><a href="#"><b>注销</b><br/><span>CANCEL</span></a></li>
+            <li><a href="index.html"><b>首页</b><br/><span>HOME</span></a></li>
+            <li><a href="gameshall.html"><b>游戏大厅</b><br/><span>GAMES</span></a></li>
+            <li><a href="master.html"><b>用户管理</b><br/><span>MASTER</span></a></li>
+            <li><a href="member.html"><b>用户中心</b><br/><span>MEMBER</span></a></li>
+            <li><a href="service.html"><b>客服中心</b><br/><span>SERVICE</span></a></li>
+            <li><a href="logout"><b>注销</b><br/><span>CANCEL</span></a></li>
             </ul>
         </div>
     </div>
