--- a/WebContent/member.html
+++ b/WebContent/member.html
@@ -189,8 +189,8 @@
         </div>
     </div>
 </div>
-<script  src="js/common.js"></script>
 <script type="text/javascript" src="js/jquery.min.js"></script>
-<script src="js/member.js"></script>
+<script  src="js/common.js"></script>
+<script src="js/member.js?v=1"></script>
 </body>
 </html>
