--- a/WebContent/member.html
+++ b/WebContent/member.html
@@ -126,8 +126,8 @@
                             <div class="left">性别：</div>
                             <div class="mid">
                                 <input type="radio" name="sex" value="男"> 男
-                                <input name="gender" type="radio" value="女"> 女
-                                <input name="gender" type="radio" value="保密"> 保密
+                                <input name="sex" type="radio" value="女"> 女
+                                <input name="sex" type="radio" value="保密"> 保密
                             </div>
                             <div class="right" id="sexTip"></div>
                         </div>
