--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -103,6 +103,7 @@
 		onmouseout="play()">
 		<div style="width: 1024px;margin:0px 140px">
 			<div class="login_panel">
+				<!-- 登录的界面 -->
 				<div class="login_content" id="login_content">
 					<ul>
 						<li><i class="span_username"></i> <input type="text"
@@ -121,6 +122,7 @@
 							class="icon_register">快速注册 > </a></li>
 					</ul>
 				</div>
+				<!-- 登录成功之后的界面 -->
 				<div id="showContent" class="login_content hidden">
 					<div class="message">
 						<img src="images/avatar.gif" alt="久久游戏用户中心" width="60" height="60"></a>
