--- a/WebContent/master.html
+++ b/WebContent/master.html
@@ -81,6 +81,13 @@
                         </div>
                     </div>
                     <div class="form-group">
+                        <label for="nickname" class="col-sm-2 control-label">昵称</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" id="nickname"
+                                   placeholder="昵称" name="nickname">
+                        </div>
+                    </div>
+                    <div class="form-group">
                         <label for="email" class="col-sm-2 control-label">Email</label>
                         <div class="col-sm-10">
                             <input type="email" class="form-control" id="email"
@@ -109,6 +116,13 @@
                                    placeholder="电话" name="tel">
                         </div>
                     </div>
+                    <div class="form-group">
+                        <label for="address" class="col-sm-2 control-label">地址</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" id="address"
+                                   placeholder="地址" name="address">
+                        </div>
+                    </div>
                 </form>
             </div>
             <div class="modal-footer">
@@ -129,6 +143,6 @@
 <script src="js/jqgrid/i18n/grid.locale-cn.js"></script>
 <script src="js/jqgrid/jquery.jqGrid.min.js"></script>
 <script type="text/javascript" src="js/common.js"></script>
-<script src="js/master.js"></script>
+<script src="js/master.js?v=1"></script>
 </body>
 </html>
